--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -8,7 +8,9 @@
   justify-content: space-between;
   padding: 10px;
   border-radius: 10px;
-  box-shadow: 4px 8px 6px #333;
+  box-shadow: 4px 8px 6px#42474c;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .brown {
