--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,7 +6,7 @@
 }
 
 .footer h5 {
-  font-family: 'Bitter', serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 24px;
   bottom: 0;
   left: 0;
